# python-hmr

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.dev.txt  setup.py
.github/workflow/: test.yaml
.github/workflows/: build.yaml  test.yaml
assets/badge/: logo.json
hmr/: __init__.py  _api.py  _reload.py  _watcher.py  api.py  reload.py
my_pkg/: __init__.py  file.py  file_module.py  wrap.py
my_pkg/sub_module/: __init__.py
tests/: conftest.py  test_module_reload.py  test_object_reload.py  test_submoduel_reload.py
tests/my_pkg/: __init__.py  state.py
tests/my_pkg/sub_module/: __init__.py
